# OOP

Lab7_8/: CMakeLists.txt  app.cpp
Lab7_8/Domain/: Expense.cpp  Expense.h
Lab7_8/Repository/: Repository.cpp  Repository.h
Lab7_8/Service/: Service.cpp  Service.h
Lab7_8/Tests/: Tests.cpp  Tests.h
Lab7_8/UserInterface/: UI.cpp  UI.h
Lab9-10 2/: CMakeLists.txt  Moneda.cpp  Moneda.h  Produs.cpp  Produs.h  Repo.cpp  Repo.h  Test.cpp  Test.h  TonException.cpp  TonException.h  TonValidator.cpp  TonValidator.h  TonomatEntity.cpp  TonomatEntity.h  TonomatRepositoryFile.cpp  TonomatRepositoryFile.h  TonomatService.cpp  TonomatService.h  UI.cpp  UI.h  main.cpp
Lab_5_POO/: CMakeLists.txt  entitate.cpp  entitate.h  main.cpp  punct.cpp  punct.h  repo.cpp  repo.h  subalg.cpp
Lab_6_POO/: CMakeLists.txt  entitate.cpp  entitate.h  main.cpp  punct.cpp  punct.h  repo.cpp  repo.h  teste.cpp
lab_9_POO-live/: CMakeLists.txt  main.cpp  repository.cpp  repository.h  student.cpp  student.h  teste.cpp  teste.h
simularePOO2022/: CMakeLists.txt  Composition.h  main.cpp
