cmake_minimum_required(VERSION 3.25)
project(Lab9_10)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab9_10 main.cpp Repo.h Repo.cpp TonomatEntity.h TonomatEntity.cpp Produs.h Produs.cpp Test.h Test.cpp TonomatService.h TonomatService.cpp UI.h UI.cpp Moneda.h Moneda.cpp TonomatRepositoryFile.h TonomatRepositoryFile.cpp TonException.h TonException.cpp TonValidator.h TonValidator.cpp)
